# python-basic-demo

./: requirements.txt
homework_01/: main.py  shebang
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: .dockerignore  Dockerfile  pyproject.toml
homework_03/blog/: items_views.py  main.py  view.py
homework_03/blog/users/: crud.py  dependecies.py  schemas.py  views.py
homework_04/: docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/static/css/: press-loading.css
homework_05/templates/: about.html  base.html  index.html
homework_06/: .dockerignore   app.py  config.py  docker-compose.yaml  jsonplaceholder_requests.py  prestart.sh  pyproject.toml
homework_06/migrations/: alembic.ini
homework_06/migrations/versions/: 2a08b557ff74_create_users_post_and_product_table.py
homework_06/models/: __init__.py  post.py  product.py  user.py
homework_06/static/css/: bootstrap.css  hide.css
homework_06/static/js/: bootstrap.bundle.js  next-item.js
homework_06/templates/: base.html  index.html  loading.html
homework_06/templates/items/: list.html  next-item.html
homework_06/templates/macros/: show-flashed-messages.html
homework_06/views/: items.py  products.py  users.py
homework_07/: manage.py
homework_07/djangohomework/: settings.py  wsgi.py
homework_07/homework/: urls.py  views.py
homework_07/templates/: base.html
homework_08/djangohomework/: asgi.py  urls.py
homework_08/homework/: models.py  urls.py  views.py
homework_08/templates/: base.html
(+15 files in other folders)
