[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["Artem_Prokofev"]
readme = "README.md"
#packages = [{include = "homework_03"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
